--- a/LPCopiers/Views/Shared/_selectedManufacturers.cshtml
+++ b/LPCopiers/Views/Shared/_selectedManufacturers.cshtml
@@ -23,8 +23,8 @@
             </tr>
         </thead>
         <tr>
-            <th>@Html.DisplayFor(model => model.Printer)</th>
-            <th><a href="@Html.DisplayFor(model => model.PrinterURL)">@Html.DisplayFor(model => model.PrinterURL)</a></th>
+            <td>@Html.DisplayFor(model => model.Printer)</td>
+            <td><a href="@Html.DisplayFor(model => model.PrinterURL)">@Html.DisplayFor(model => model.PrinterURL)</a></td>
         </tr>
     </table>
 
@@ -37,8 +37,8 @@
             </tr>
         </thead>
         <tr>
-            <th>@Html.DisplayFor(model => model.Fax)</th>
-            <th><a href="@Html.DisplayFor(model => model.FaxURL)">@Html.DisplayFor(model => model.FaxURL)</a></th>
+            <td>@Html.DisplayFor(model => model.Fax)</td>
+            <td><a href="@Html.DisplayFor(model => model.FaxURL)">@Html.DisplayFor(model => model.FaxURL)</a></td>
         </tr>
     </table>
 
