--- a/LPCopiers/Views/Shared/_Layout.cshtml
+++ b/LPCopiers/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
         <title>@ViewBag.Title - LP Copiers</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
+        <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
         @Styles.Render("~/Content/gumby")
         @Scripts.Render("~/bundles/modernizr")
         @Styles.Render("~/Content/css") @*Rendered last to overwrite any predefined bootstrap css*@
