--- a/LPCopiers/Views/Home/_ContactForm.cshtml
+++ b/LPCopiers/Views/Home/_ContactForm.cshtml
@@ -2,7 +2,6 @@
 
 <script src="~/Scripts/jquery-1.8.2.min.js"></script>
 <script src="~/Scripts/globalize/globalize.js"></script>
-@*<script src="~/Scripts/jquery.validate.min.js"></script>*@
 <script src="~/Scripts/jquery.validate.globalize.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 <script src="~/Scripts/jquery-ui-1.8.24.min.js"></script>
@@ -11,7 +10,12 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
+    if (!ViewData.ModelState.IsValid)
+    { 
+       <p>Please check for errors</p>
+    }
+    @ViewBag.Message
+    
     <fieldset>
         <legend>Contact Form</legend>
 
@@ -110,7 +114,7 @@
             @Html.EditorFor(model => model.Phone)
             @Html.ValidationMessageFor(model => model.Phone)
         </div>
-
+        <p>Change to radio button list of types</p>
         <div class="editor-label">
             @Html.LabelFor(model => model.VisitType)
         </div>
