--- a/LPCopiers/Views/Equipment/Create.cshtml
+++ b/LPCopiers/Views/Equipment/Create.cshtml
@@ -3,81 +3,92 @@
 @{
     ViewBag.Title = "Create";
 }
+<header class="title">
+    <div class="row">
+        <div class="twelve columns">
+            <h1>Create New Equipment Record</h1>
+        </div>
+    </div>
+</header>
 
-<h2>Create</h2>
+<div class="row">
+    <div class="twelve columns">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+                <fieldset>
+                    <legend>Equipment</legend>
 
-    <fieldset>
-        <legend>Equipment</legend>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.EngRef)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.EngRef)
+                        @Html.ValidationMessageFor(model => model.EngRef)
+                    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.EngRef)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.EngRef)
-            @Html.ValidationMessageFor(model => model.EngRef)
-        </div>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.serialNo)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.serialNo)
+                        @Html.ValidationMessageFor(model => model.serialNo)
+                    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.serialNo)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.serialNo)
-            @Html.ValidationMessageFor(model => model.serialNo)
-        </div>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Make)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Make)
+                        @Html.ValidationMessageFor(model => model.Make)
+                    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Make)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Make)
-            @Html.ValidationMessageFor(model => model.Make)
-        </div>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Model)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Model)
+                        @Html.ValidationMessageFor(model => model.Model)
+                    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Model)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Model)
-            @Html.ValidationMessageFor(model => model.Model)
-        </div>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Company)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Company)
+                        @Html.ValidationMessageFor(model => model.Company)
+                    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Company)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Company)
-            @Html.ValidationMessageFor(model => model.Company)
-        </div>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Contact)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Contact)
+                        @Html.ValidationMessageFor(model => model.Contact)
+                    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Contact)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Contact)
-            @Html.ValidationMessageFor(model => model.Contact)
-        </div>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Location)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Location)
+                        @Html.ValidationMessageFor(model => model.Location)
+                    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Location)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Location)
-            @Html.ValidationMessageFor(model => model.Location)
-        </div>
+                    <p>
+                        <input type="submit" value="Create" />
+                    </p>
+                </fieldset>
+            }
 
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+            <div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+    </div>
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
