--- a/LPCopiers/Views/Equipment/Delete.cshtml
+++ b/LPCopiers/Views/Equipment/Delete.cshtml
@@ -3,66 +3,76 @@
 @{
     ViewBag.Title = "Delete";
 }
+<header class="title">
+    <div class="row">
+        <div class="twelve columns">
+            <h1>Delete Equipment Record</h1>
+        </div>
+    </div>
+</header>
+<div class="row">
+    <div class="twelve columns">
+        <h2>Are you sure you want to delete this?</h2>
+        <fieldset>
+            <legend>Equipment</legend>
 
-<h2>Delete</h2>
+            <div class="display-label">
+                @Html.DisplayNameFor(model => model.EngRef)
+            </div>
+            <div class="display-field">
+                @Html.DisplayFor(model => model.EngRef)
+            </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Equipment</legend>
+            <div class="display-label">
+                @Html.DisplayNameFor(model => model.serialNo)
+            </div>
+            <div class="display-field">
+                @Html.DisplayFor(model => model.serialNo)
+            </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.EngRef)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.EngRef)
-    </div>
+            <div class="display-label">
+                @Html.DisplayNameFor(model => model.Make)
+            </div>
+            <div class="display-field">
+                @Html.DisplayFor(model => model.Make)
+            </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.serialNo)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.serialNo)
-    </div>
+            <div class="display-label">
+                @Html.DisplayNameFor(model => model.Model)
+            </div>
+            <div class="display-field">
+                @Html.DisplayFor(model => model.Model)
+            </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Make)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Make)
-    </div>
+            <div class="display-label">
+                @Html.DisplayNameFor(model => model.Company)
+            </div>
+            <div class="display-field">
+                @Html.DisplayFor(model => model.Company)
+            </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Model)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Model)
-    </div>
+            <div class="display-label">
+                @Html.DisplayNameFor(model => model.Contact)
+            </div>
+            <div class="display-field">
+                @Html.DisplayFor(model => model.Contact)
+            </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Company)
+            <div class="display-label">
+                @Html.DisplayNameFor(model => model.Location)
+            </div>
+            <div class="display-field">
+                @Html.DisplayFor(model => model.Location)
+            </div>
+        </fieldset>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <p>
+                <input type="submit" value="Delete" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </p>
+        }
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Company)
-    </div>
+</div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Contact)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Contact)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Location)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Location)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-}
