--- a/LPCopiers/Views/Equipment/Edit.cshtml
+++ b/LPCopiers/Views/Equipment/Edit.cshtml
@@ -4,81 +4,93 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<header class="title">
+    <div class="row">
+        <div class="twelve columns">
+            <h1>Edit Equipment Record Details</h1>
+        </div>
+    </div>
+</header>
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+<div class="row">
+    <div class="twelve columns">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Equipment</legend>
+            <fieldset>
+                <legend>Equipment</legend>
 
-        @Html.HiddenFor(model => model.EquipmentID)
+                @Html.HiddenFor(model => model.EquipmentID)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.EngRef)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.EngRef)
-            @Html.ValidationMessageFor(model => model.EngRef)
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.EngRef)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.EngRef)
+                    @Html.ValidationMessageFor(model => model.EngRef)
+                </div>
+
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.serialNo)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.serialNo)
+                    @Html.ValidationMessageFor(model => model.serialNo)
+                </div>
+
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.Make)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.Make)
+                    @Html.ValidationMessageFor(model => model.Make)
+                </div>
+
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.Model)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.Model)
+                    @Html.ValidationMessageFor(model => model.Model)
+                </div>
+
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.Company)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.Company)
+                    @Html.ValidationMessageFor(model => model.Company)
+                </div>
+
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.Contact)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.Contact)
+                    @Html.ValidationMessageFor(model => model.Contact)
+                </div>
+
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.Location)
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.Location)
+                    @Html.ValidationMessageFor(model => model.Location)
+                </div>
+
+                <p>
+                    <input type="submit" value="Save" />
+                </p>
+            </fieldset>
+        }
+
+        <div>
+            @Html.ActionLink("Back to List", "Index")
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.serialNo)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.serialNo)
-            @Html.ValidationMessageFor(model => model.serialNo)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Make)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Make)
-            @Html.ValidationMessageFor(model => model.Make)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Model)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Model)
-            @Html.ValidationMessageFor(model => model.Model)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Company)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Company)
-            @Html.ValidationMessageFor(model => model.Company)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Contact)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Contact)
-            @Html.ValidationMessageFor(model => model.Contact)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Location)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Location)
-            @Html.ValidationMessageFor(model => model.Location)
-        </div>
-
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    </div>
 </div>
 
 @section Scripts {
