--- a/LPCopiers/Views/Equipment/Create.cshtml
+++ b/LPCopiers/Views/Equipment/Create.cshtml
@@ -3,13 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
-<header class="title">
-    <div class="row">
-        <div class="twelve columns">
-            <h1>Create New Equipment Record</h1>
-        </div>
-    </div>
-</header>
+@{Html.RenderPartial("_header");}
 
 <div class="row">
     <div class="twelve columns">
