--- a/LPCopiers/Views/Equipment/Delete.cshtml
+++ b/LPCopiers/Views/Equipment/Delete.cshtml
@@ -3,13 +3,7 @@
 @{
     ViewBag.Title = "Delete";
 }
-<header class="title">
-    <div class="row">
-        <div class="twelve columns">
-            <h1>Delete Equipment Record</h1>
-        </div>
-    </div>
-</header>
+@{Html.RenderPartial("_header");}
 <div class="row">
     <div class="twelve columns">
         <h2>Are you sure you want to delete this?</h2>
