--- a/LPCopiers/Views/Equipment/DetailsByEngineer.cshtml
+++ b/LPCopiers/Views/Equipment/DetailsByEngineer.cshtml
@@ -4,13 +4,7 @@
     ViewBag.Title = "DetailsByEngineer";
 }
 
-<header class="title">
-    <div class="row">
-        <div class="twelve columns">
-            <h1>Equipment Records</h1>
-        </div>
-    </div>
-</header>
+@{Html.RenderPartial("_header");}
 <div class="row">
     <div class="twelve">
         <p>
