--- a/LPCopiers/Views/Home/Index.cshtml
+++ b/LPCopiers/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
         <div class="six columns" >
             <h2>What We Offer</h2>
             <p>Uk wide service and repair of photocopier and printing equipment.</p>
-            <p>Our expert trained staff have experience with all main makes of @Html.ActionLink("learn more", "About", "Home")</a></p>
+            <p>Our expert trained staff have experience with all main makes of equipment</p>
         </div>
 
         <div class="six columns text-center">
