--- a/LPCopiers/Views/Staff/Wage.cshtml
+++ b/LPCopiers/Views/Staff/Wage.cshtml
@@ -3,11 +3,9 @@
     ViewBag.Title = "Wage";
     
 }
+@{Html.RenderPartial("_header");}
 <div class="row">
     <div class="eight columns">
-        <header class="title">
-            <h1>Wage</h1>
-        </header>
         <table class="rounded">
             <tr>
                 <td>
