--- a/LPCopiers/Views/User/Details.cshtml
+++ b/LPCopiers/Views/User/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+@{Html.RenderPartial("_header");}
 
 <fieldset>
     <legend>UserProfile</legend>
