--- a/LPCopiers/Views/User/Index.cshtml
+++ b/LPCopiers/Views/User/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+@{Html.RenderPartial("_header");}
 
 <p>
     @Html.ActionLink("Register", "../Account/Register")
