--- a/LPCopiers/Content/Site.css
+++ b/LPCopiers/Content/Site.css
@@ -28,10 +28,25 @@ h1, h2, h3, h4, h5 {
     background-color: #f5f5f5;
 }
 
+.navbar ul li > a:hover {
+    color: #fff;
+}
+.navbar ul li {
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
 
 /* Header Styles*/
 .title {
     margin-top: 40px;
+    background-color: rgba(112, 185, 239, 0.850);
+    color: #fff;
+}
+
+.title h1, .title h2{
+    color: #fff;
 }
 
 /*Parallax front page*/
