--- a/LPCopiers/Views/Account/Manage.cshtml
+++ b/LPCopiers/Views/Account/Manage.cshtml
@@ -2,11 +2,9 @@
 @{
     ViewBag.Title = "Manage Account";
 }
+@{Html.RenderPartial("_header");}
 <div class="row">
     <div class="twelve columns">
-        <header class="title">
-            <h1>@ViewBag.Title.</h1>
-        </header>
 
         <p class="message-success">@ViewBag.StatusMessage</p>
 
