--- a/LPCopiers/Views/Account/Register.cshtml
+++ b/LPCopiers/Views/Account/Register.cshtml
@@ -2,12 +2,9 @@
 @{
     ViewBag.Title = "Register";
 }
+@{Html.RenderPartial("_header");}
 <div class="row">
     <div class="twelve columns">
-        <header class="title">
-            <h1>@ViewBag.Title.</h1>
-            <h2>Create a new account.</h2>
-        </header>
 
         @using (Html.BeginForm())
         {
@@ -34,7 +31,7 @@
                         @Html.TextBoxFor(m=>m.surname)
                     </li>
                 </ol>
-                <input type="submit" value="Register" />
+                <input type="submit" value="Register" class="medium secondary btn"/>
             </fieldset>
         }
     </div>
