--- a/LPCopiers/Views/Equipment/Details.cshtml
+++ b/LPCopiers/Views/Equipment/Details.cshtml
@@ -4,13 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<header class="title">
-    <div class="row">
-        <div class="twelve columns">
-            <h1>Equipment Record Details</h1>
-        </div>
-    </div>
-</header>
+@{Html.RenderPartial("_header");}
 <div class="row">
     <div class="twelve columns">
         <fieldset>
