--- a/LPCopiers/Views/Equipment/Edit.cshtml
+++ b/LPCopiers/Views/Equipment/Edit.cshtml
@@ -4,13 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<header class="title">
-    <div class="row">
-        <div class="twelve columns">
-            <h1>Edit Equipment Record Details</h1>
-        </div>
-    </div>
-</header>
+@{Html.RenderPartial("_header");}
 
 <div class="row">
     <div class="twelve columns">
