--- a/LPCopiers/Views/Staff/PartsRequest.cshtml
+++ b/LPCopiers/Views/Staff/PartsRequest.cshtml
@@ -3,13 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<header class="title">
-    <div class="row">
-        <div class="twelve columns">
-            <h1>Parts Order</h1>
-        </div>
-    </div>
-</header>
+@{Html.RenderPartial("_header");}
 
 <div class="row">
     <div class="twelve columns">
