--- a/LPCopiers/Views/Staff/PartsUpload.cshtml
+++ b/LPCopiers/Views/Staff/PartsUpload.cshtml
@@ -2,6 +2,5 @@
     ViewBag.Title = "PartsUpload";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>PartsUpload</h2>
+@{Html.RenderPartial("_header");}
 @ViewBag.Message
